// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleOfSignificanceTemplate component should render default view 1`] = `
<ForwardRef(Grid)
  container={true}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Typography)
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.5)",
        }
      }
      variant="body2"
    >
      First
       listed author 
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={3}
    xs={12}
  >
    <ForwardRef(Typography)
      id="scale-item-0"
      variant="body2"
    >
      Missing
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={9}
    xs={12}
  >
    <ForwardRef(Typography)
      component="span"
      id="statement-item-0"
      variant="body2"
    />
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`ScaleOfSignificanceTemplate component should render with author name 1`] = `
<ForwardRef(Grid)
  container={true}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Typography)
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.5)",
        }
      }
      variant="body2"
    >
      First
       listed author 
      (author)
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={3}
    xs={12}
  >
    <ForwardRef(Typography)
      id="scale-item-0"
      variant="body2"
    >
      Missing
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    md={9}
    xs={12}
  >
    <ForwardRef(Typography)
      component="span"
      id="statement-item-0"
      variant="body2"
    />
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;
